applications/uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      name: uptime-kuma
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/path: "/metrics"
        prometheus.io/scrape: "true"
        prometheus.io/port: "3001"
      creationTimestamp: null
      labels:
        name: uptime-kuma
    spec:
      containers:
        - image: louislam/uptime-kuma
          name: uptime-kuma
          ports:
            - containerPort: 3001
          resources: {}
          volumeMounts:
            - mountPath: /app/data
              name: uptime-kuma-claim0

      restartPolicy: Always
      volumes:
        - name: uptime-kuma-claim0
          persistentVolumeClaim:
            claimName: uptime-kuma-claim0
status: {}
