applications/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  name: uptime-kuma
spec:
  ports:
    - name: "3001"
      port: 3001
      targetPort: 3001
  selector:
    name: uptime-kuma
status:
  loadBalancer: {}
