applications/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.tls: "true"
    #traefik.ingress.kubernetes.io/router.middlewares: kube-system-basic-auth-middleware@kubernetescrd
  name: uptime-kuma-ingress
  namespace: monitoring
spec:
  rules:
    - host: uptime.home.juli.sh
      http:
        paths:
          - backend:
              service:
                name: uptime-kuma-service
                port:
                  number: 3001
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - uptime.home.juli.sh
      secretName: uptime-tls
status:
  loadBalancer: {}
